# rehof-buchung

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Losverfahren-Spezifikation.md  README.md  docker-compose.ci.yml  docker-compose.yml  entrypoint.sh  install.sh  manage.py  pyproject.toml  pytest.ini  requirements-e2e.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: tests.yml
booking/: admin.py  admin_apps.py  admin_site.py  apps.py  auth.py  authz.py  availability.py  beds24.py  context_processors.py  exports.py  external.py  fairness.py  fieldcrypt.py  fields.py  forms.py  helptext.py  lottery.py  middleware.py  models.py  nl_golden.py  nl_mining.py  notify_catalog.py  permissions.py  plan_pdf.py  popularity.py  rules.py  services.py  signals.py  tests.py  tests_accounts.py  tests_auth.py  tests_authz.py  tests_beds24.py  tests_bl_buchungen.py  tests_blocks.py  tests_booking_details.py  tests_community.py  tests_concurrency.py  tests_correctness.py  tests_csp.py  (+35 more)
booking/help_content/: entzerrung.md  gemeinschaft.md  hofladen.md  tage.md  warteliste.md
booking/migrations/: 0001_initial.py  0002_bookingwindow_nighttransfer.py  0003_bookingpolicy_seasonrule.py  0004_schoolholiday_wish_submitted_wish_submitted_at.py  0006_upcomingallocation.py  (+74 more)
caddy/: Caddyfile.snippet
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: 2FA-BACKEND.md  BETRIEB-SICHERHEIT.md  DATENSCHUTZ-VORLAGE.md  DEPLOYMENT.md  EXTERNE-GAESTE.md  FACHKONZEPT.md  FEEDBACK2-UMSETZUNG.md  GO-LIVE.md  HOFLADEN-KIOSK-KONZEPT.md  TESTEN.md  TESTER-EINLADUNG.md  TESTER-FEEDBACK.md
loadtest/: README.md  booking_rush.js  browse.js  shop_rush.js
ops/: backup.sh  migrate-server.sh  redeploy.sh
shop/: admin.py  apps.py  bankimport.py  models.py  mollie_api.py  payments.py  pdf.py  reconcile.py  services.py  tests.py  tests_payments.py  urls.py  views.py
tests/: prose_lint.py  test_availability.py  test_beds24.py  test_commit_reveal.py  test_external.py  test_fairness.py  test_fieldcrypt.py  test_helptext.py  test_lottery.py  test_nl_golden.py  test_nl_mining.py  test_popularity.py  test_prognosis.py  test_prose.py  test_retrospective.py  test_rules.py  test_templates.py  test_validation.py  test_wish_nl.py
tests_e2e/: conftest.py  test_smoke.py
(+245 files in other folders)
